# loghero

./: .gitignore  README.md  boot_django.py  makemigrations.py  manage.py  migrate.py  pyproject.toml  showmigrations.py
loghero/: asgi.py  settings.py  urls.py  wsgi.py
sample_project/: requirements.txt
sample_project/api/: views.py
sample_project/sample_project/: LogHeroDocs.md  settings.py  urls.py
src/loghero/: admin.py  apps.py  manager.py  models.py
src/loghero/migrations/: 0001_initial.py  0002_alter_log_extra_data.py  0003_alter_log_status.py  0004_log_actor_label.py
